Implementation of JRuby interface layer. Creation os skeleton plugin